
Removed obsolete configuration items from config.php-example

Fixed UI updating of UI components when a VM is added or removed
from a selected group or its subgroups 

Added PHP version check

Better error handling when the event listener fails

Menu bug that would not always trigger an action when a menu item
was clicked

Added check for PHP LDAP extension in LDAP auth module

Added experimental AD auth module 

-------------------------------------
	4.2-2	2012-10-15
-------------------------------------
Look-and-feel changes to more closely match the VirtualBox GUI

Better UI handling of long group and VM names

Fixed bug causing phpVirtualBox to not load in IE unless the
JavaScript console was open

Added config option to exclusively use phpVirtualBox's own groups
configuration rather than VirtualBox groups - see
config.php-example for more info

Fixed bug that would leave group information (vm / group counts
and icons) always visible after renaming a group

Improved redraw logic for VM data in the Details section / tab

Improved chooser grouping logic when grouping multiple items

GUI state information is now saved in browser's localStorage
instead of using cookies
http://www.w3schools.com/html/html5_webstorage.asp

Collapsed state of groups is now remembered if the browser
supports localStorage

-------------------------------------
	4.2-1	2012-10-09
-------------------------------------
VirtualBox 4.2.x compatibility release

Various regression bug fixes from beta versions

Moved to using VirtualBox's passive event listener mechanism, and
as a result:

PHP session support is now required

PHP minimum requirement is now at 5.2.0 (released in 2006)

-------------------------------------
	4.2-0b	2012-09-27
-------------------------------------
VirtualBox 4.2.x compatibility - beta release
NOT ALL VirtualBox 4.2 FEATURES ARE IMPLEMENTED!!
http://code.google.com/p/phpvirtualbox/issues/detail?id=585

Various regression bug fixes.
